--- a/timeline.html
+++ b/timeline.html
@@ -184,10 +184,10 @@
 
     // Paths to your JSON files
     const chartSpecs = [
-      'https://raw.githubusercontent.com/WyattJiang/data_vis/refs/heads/main/global_disaasters_charts.json', // chart1
-      'https://raw.githubusercontent.com/WyattJiang/data_vis/refs/heads/main/bubble_plots.json',       // chart2
-      'https://raw.githubusercontent.com/WyattJiang/data_vis/refs/heads/main/interactive_charts.json', // chart3
-      'https://raw.githubusercontent.com/WyattJiang/data_vis/refs/heads/main/isotype_charts.json'      // chart4
+      'global_disaasters_charts.json', // chart1
+      'bubble_plots.json',       // chart2
+      'interactive_charts.json', // chart3
+      'isotype_charts.json'      // chart4
     ];
 
     // Embedding each chart
