--- a/timeline.html
+++ b/timeline.html
@@ -93,6 +93,7 @@
       <div id="chart2" class="chart"></div>
       <p class="paragraph">(data can be filtered by selecting the range on the dot charts describing damage by each disaster over year)</p>
       <p class="paragraph">Data highlights major occurrences over time.</p>
+      <p class="paragraph">In 2000, 2010, 2008 the natural disaster happened most frequently.</p>
     </div>
     <div class="chart-paragraph">
       <div id="chart3" class="chart"></div>
